--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <p><center><img src="img/icon.png" alt="" class="img-responsive"></center></p>
 
           <h6>pico-8 manpage</h6>
-          <pre><code class="bash"># version 0.1.10
+          <pre><code class="bash"># version 0.2.0i
 
 pico-8 [switches] [filename.p8] # run pico-8 from the system cli
 
@@ -436,7 +436,14 @@ holdframe() -- used automatically by _mainloop()</code></pre>
 sub(str, from, [to]) -- substring
 tostr(val, [hex]) -- convert val to a string; if hex is true and val is a number, output format is "0x0000.0000"
 tonum(str) -- cast parseable str to number; nil if str isn't a number; "0xAF" format for hex
-"123.45" + 0 -- alternative to tonum</code></pre>
+"123.45" + 0 -- alternative to tonum
+</code></pre>
+
+          <h6>8-bit character set</h6>
+          <pre><code class="lua">chr(num) -- gets a string character from a value[0..255]
+ord(str) -- gets the index [0..255] from a character
+print(chr(135).. " : ".. ord('♥')) -- ♥ : 135 </code></pre>
+
 
           <h6>special characters</h6>
           <pre><code class="lua">print("l:\x8b r:\x91 u:\x94 d:\x83 o:\x8e x:\x97")</code></pre>
