:jack_o_lantern: Updated footer

--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
       0x07. INPUT
       0x08. MAP
       0x09. MATH
-      0x0A. MEMORY
-      0x0B. PEEK / POKE
-      0x0C. PICO-8
-      0x0D. STRINGS
-      0x0E. TABLES
+      0x0A. MATH
+      0x0B. MEMORY
+      0x0C. PEEK / POKE
+      0x0D. PICO-8
+      0x0E. STRINGS
+      0x0F. TABLES
       0x0F. KEYS
         0x00. KEYS_0
         0x01. KEYS_1
@@ -687,8 +688,9 @@ function mt.__le(a, b) return a <= b end</code></pre>
 
     <div class="footer">
       <div class="row">
-        <div class="col-md-4" style="text-align: left;">pico-8 by <a href="http://www.lexaloffle.com/" target="_blank">lexaloffle</a> <img src="img/lexaloffle.png" style="width: 25px;"></img></div>
+        <div class="col-md-4" style="text-align: center;">pico-8 by <a href="http://www.lexaloffle.com/" target="_blank">lexaloffle</a> <img src="img/lexaloffle.png" style="width: 25px;"></img></div>
         <div class="col-md-4" style="text-align: center;">made with <i class="fa fa-heart text-danger"></i> by <a href="https://neko250.github.io" target="_blank">neko250</a></div>
+        <div class="col-md-4" style="text-align: center;">updated with <i class="fa fa-heart text-danger"></i> by <a href="https://github.com/iiviigames" target="_blank">iiviigames</a></div>
         <div class="col-md-4" style="text-align: right;">contribute on <a href="https://github.com/Neko250/pico8-api" target="_blank">github</a> <i class="fa fa-lg fa-code-fork text-primary"></i></div>
       </div>
     </div>
