:ghost: Updated footer again

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ function mt.__le(a, b) return a <= b end</code></pre>
         <div class="col-md-4" style="text-align: center;">pico-8 by <a href="http://www.lexaloffle.com/" target="_blank">lexaloffle</a> <img src="img/lexaloffle.png" style="width: 25px;"></img></div>
         <div class="col-md-4" style="text-align: center;">made with <i class="fa fa-heart text-danger"></i> by <a href="https://neko250.github.io" target="_blank">neko250</a></div>
         <div class="col-md-4" style="text-align: center;">updated with <i class="fa fa-heart text-danger"></i> by <a href="https://github.com/iiviigames" target="_blank">iiviigames</a></div>
-        <div class="col-md-4" style="text-align: right;">contribute on <a href="https://github.com/Neko250/pico8-api" target="_blank">github</a> <i class="fa fa-lg fa-code-fork text-primary"></i></div>
+        <div class="col-md-4" style="text-align: right;">contribute on <a href="https://github.com/iiviigames/pico8-api" target="_blank">github</a> <i class="fa fa-lg fa-code-fork text-primary"></i></div>
       </div>
     </div>
 
