--- a/index.html
+++ b/index.html
@@ -96,11 +96,42 @@
 				<div role="tabpanel" class="tab-pane active" id="home">
 					<p><center><img src="img/icon.png" alt="" class="img-responsive"></center></p>
 
-					<h6>pico-8 manpage</h6>
-					<pre><code class="bash"># version 0.2.0i
+					<h6>Commandline Arguments</h6>
+					<h6>Version <code>0.2.0i</code></h6>
+					<pre><code class="gml">-- Run Pico-8 from Terminal
+pico-8 [switches] cart.p8
 
-pico-8 [switches] [filename.p8] # run pico-8 from the system cli
+-splore			-- boot in splore mode
 
+-width		n	-- set the window width 
+-height		n	-- set the window height 
+-windowed	n	-- set windowed mode off (0) or on (1)
+-volume		n	-- set all audio volume [0..256]
+-sound		n	-- set only sfx volume [0..256]
+-music		n	-- set only music volume [0..256]
+-joystick	n	-- joystick controls starts at player n (0..7)
+-pixel_perfect	n	-- 1 for unfiltered screen stretching at integer scales
+-preblit_scale	n	-- scale the display by n before blitting to screen
+-draw_rect	x,y,w,h	-- absolute window coordinates and size to draw the p8 screen 
+-run		cart	-- load and run a cartridge
+-x		cart	-- execute a PICO-8 cart headless and then quit (experimental!)
+-export		args	-- run EXPORT command in headless mode and exit
+-p		args	-- pass a parameter string to the specified cartridge
+-home		path	-- set the path to store config.txt and other user data files
+-root_path	path	-- set the path to store cartridge files
+-desktop	path	-- set a location for screenshots and gifs to be saved
+-gif_scale	n	-- scale of gif captures. default: 2 (256x256 pixels)
+-gif_len	n	-- set the maximum gif length in seconds (1..120)
+-gui_theme	n	-- use 1 for a grey, higher contrast editor color scheme (0: blue)
+-timeout	n	-- how many seconds to wait for splore downloads timeout (d: 30)
+-software_blit	n	-- use software blitting mode off (0) or on (1)
+-accept_future	n	-- use 1 to allow loading cartridges made w/ newer P8 versions
+-screenshot_scale	n -- scale of screenshots.  default: 3 (368x368 pixels)
+-foreground_sleep_ms	n -- how many milliseconds to sleep between frames.
+-background_sleep_ms	n -- how many milliseconds to sleep between frames in bg</code></pre>
+
+<!-- 					<h6>old manpage</h6>
+					<pre><code class="bash"># version 0.1.11c
 -run # boot filename.p8 on startup
 -width n # set the window or screen width and adjust scale to fit if not specified
 -height n # set the window or screen height and adjust scale to fit if not specified
@@ -119,7 +150,7 @@ pico-8 [switches] [filename.p8] # run pico-8 from the system cli
 -gui_theme n # set the code editor theme; 0 = classic, 1 = dark blue
 -timeout n # timeout switch for splore downloads
 -frameless b # set borderless window off (0) or on (1)
--show_fps b # set fps display off (0) or on (1)</code></pre>
+-show_fps b # set fps display off (0) or on (1)</code></pre> -->
 
 					<h6>pico-8 specs</h6>
 					<pre><code class="markdown">- display: 128x128, fixed 16 colour palette
