--- a/palette/index.html
+++ b/palette/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>pico-8 palette</title>
+    <title>PICO-8 Palette</title>
     <link href="https://humblebundle-a.akamaihd.net/misc/files/hashed/daa4f4f06ae0362be8738d5a33f17ca31bf298b3.png" rel="icon">
     <style>
       .black       { background-color: #000000; }
