--- a/index.html
+++ b/index.html
@@ -158,26 +158,26 @@
 
 					<h6 style="line-height: 20px;">Version <code>0.2.1b</code> <br><i><code>oval() ovalfill() split()</code> added</i></h6>
 					<h6 class="sub-heading">Commandline Arguments</h6>
+					<style>.a{font-style: italic; color: teal; font-weight: 900;}</style>
 					<pre><code class="gml">-- Run Pico-8 from Terminal
 pico-8 [switches] cart.p8
 
--splore			-- boot in splore mode
-
--width		n	-- set the window width 
--height		n	-- set the window height 
--windowed	n	-- set windowed mode off (0) or on (1)
--volume		n	-- set all audio volume [0..256]
--sound		n	-- set only sfx volume [0..256]
--music		n	-- set only music volume [0..256]
--joystick	n	-- joystick controls starts at player n (0..7)
--pixel_perfect	n	-- 1 for unfiltered screen stretching at integer scales
--preblit_scale	n	-- scale the display by n before blitting to screen
--draw_rect	x,y,w,h	-- absolute window coordinates and size to draw the p8 screen 
--run		cart	-- load and run a cartridge
--x		cart	-- execute a PICO-8 cart headless and then quit (experimental!)
--export		args	-- run EXPORT command in headless mode and exit
--p		args	-- pass a parameter string to the specified cartridge
--home_path	path	-- set the path to store config.txt and other user data files
+-splore -- boot in splore mode
+-width	<span class="a">n</span>	-- set the window width 
+-height					n	-- set the window height 
+-windowed	         n	-- set windowed mode off (0) or on (1)
+-volume		         n	-- set all audio volume [0..256]
+-sound		         n	-- set only sfx volume [0..256]
+-music		         n	-- set only music volume [0..256]
+-joystick	         n	-- joystick controls starts at player n (0..7)
+-pixel_perfect	   n	-- 1 for unfiltered screen stretching at integer scales
+-preblit_scale	   n	-- scale the display by n before blitting to screen
+-draw_rect	    xywh	-- absolute window coordinates and size to draw the p8 screen 
+-run		        cart	-- load and run a cartridge
+-x		          cart	-- execute a PICO-8 cart headless and then quit (experimental!)
+-export		      args	-- run EXPORT command in headless mode and exit
+-p		          args	-- pass a parameter string to the specified cartridge
+-home_path	    path	-- set the path to store config.txt and other user data files
 -root_path	path	-- set the path to store cartridge files
 -desktop	path	-- set a location for screenshots and gifs to be saved
 -gif_scale	n	-- scale of gif captures. default: 2 (256x256 pixels)
@@ -188,7 +188,9 @@ pico-8 [switches] cart.p8
 -accept_future	n	-- use 1 to allow loading cartridges made w/ newer P8 versions
 -screenshot_scale	n -- scale of screenshots.  default: 3 (368x368 pixels)
 -foreground_sleep_ms	n -- how many milliseconds to sleep between frames.
--background_sleep_ms	n -- how many milliseconds to sleep between frames in bg</code></pre>
+-background_sleep_ms	n -- how many milliseconds to sleep between frames in bg
+-accept_future   n -- use 1 to allow loading cartridges made with future versions of PICO-8 
+</code></pre>
 
 <!-- 					<h6>old manpage</h6>
 					<pre><code class="bash"># version 0.1.11c
